quick fix for centering popup on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -144,7 +144,8 @@ body{
       }
 
       #popcont{
-
+        right: 25%;
+        left: 25%;
       }
 
       .grid{
